--- a/res/layout/activity_count.xml
+++ b/res/layout/activity_count.xml
@@ -203,7 +203,7 @@
                     android:text="@string/sub"
                     android:textSize="50sp" />
             </TableRow>
-
+			
             <Button
                 android:id="@+id/send_to_server_button"
                 android:layout_width="wrap_content"
@@ -211,7 +211,7 @@
                 android:layout_marginTop="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="@string/action_sendtoserver" />
+                android:text="@string/action_sync" />
 
             <Button
                 android:id="@+id/reset_button"
