--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -130,6 +130,7 @@
                 android:layout_marginTop="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
+                android:onClick="signUp"
                 android:text="@string/action_sign_up_register" />
         </LinearLayout>
     </ScrollView>
